Kubernets-Docker-Configs/chat/chat.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: kanban
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: walymb/chat:latest
        resources:
          limits:
            memory: "800Mi"
            cpu: "900m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: keys-volume
          mountPath: /app/keys
      volumes:
      - name: keys-volume
        persistentVolumeClaim:
          claimName: keys-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: kanban
spec:
  selector:
    app: chat
  ports:
  - port: 9091
    targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: kanban
  labels:
    name: chat-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"  
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"  
    nginx.ingress.kubernetes.io/websocket-timeout: "3600"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-type: "cookies"
spec:
  rules:
  - host: chat.rancher.waly.dev.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: chat-service
            port: 
              number: 9091
